--- a/index.html
+++ b/index.html
@@ -2,39 +2,57 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>AI Tools & Automation — Free Guide for Beginners</title>
+<title>AI Tools & Automation — Free Guide</title>
 <link rel="stylesheet" href="assets/style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
-<header>
+
+<!-- Header Section -->
+<header class="header">
   <h1>AI Tools & Automation</h1>
-  <p>Free Guide for Beginners • Tools • Templates • Automation Workflows</p>
+  <p>Your Free Beginner Guide • Tools • Templates • Workflows</p>
 </header>
+
+<!-- Hero Section -->
 <section class="hero">
-  <h2>Start Your AI Journey</h2>
-  <p>Learn AI tools, automate your work, and build digital income — step by step.</p>
-  <a class="btn" href="pages/tools.html">Explore Free AI Tools</a>
-  <a class="btn" href="pages/automation.html">Beginner Automation Guides</a>
+  <h2>Start Your AI Journey Today</h2>
+  <p>Discover powerful AI tools, automate your work, and learn step-by-step workflows — all in one place.</p>
+
+  <div class="hero-buttons">
+    <a class="btn primary" href="pages/tools.html">📘 Free AI Tools List</a>
+    <a class="btn secondary" href="pages/automation.html">⚙️ Automation Guides</a>
+  </div>
 </section>
+
+<!-- Cards Section -->
 <section class="grid">
+
   <div class="card">
-    <h3>Free AI Tools</h3>
-    <p>50+ handpicked tools for writing, design, research & automation.</p>
-    <a href="pages/tools.html">View Tools →</a>
+    <h3>🔥 Free AI Tools</h3>
+    <p>50+ verified tools for writing, research, design, coding & automation.</p>
+    <a class="small-btn" href="pages/tools.html">Explore →</a>
   </div>
+
   <div class="card">
-    <h3>Automation for Beginners</h3>
-    <p>Simple workflows using free tools like Make, Zapier, Notion, Sheets.</p>
-    <a href="pages/automation.html">Start Learning →</a>
+    <h3>⚙️ Beginner Automation</h3>
+    <p>Easy workflows using Make, Zapier, Sheets, Notion & ChatGPT.</p>
+    <a class="small-btn" href="pages/automation.html">Learn More →</a>
   </div>
+
   <div class="card">
-    <h3>Free Templates</h3>
-    <p>Notion templates, Canva templates & prompt packs.</p>
-    <a href="pages/templates.html">Download →</a>
+    <h3>📁 Free Templates</h3>
+    <p>Notion dashboards, prompt packs, content systems & Canva templates.</p>
+    <a class="small-btn" href="pages/templates.html">Download →</a>
   </div>
+
 </section>
+
+<!-- Footer -->
 <footer>
   <p>Made with ❤️ using GitHub Pages</p>
 </footer>
+
 </body>
 </html>
