--- a/pages/tools.html
+++ b/pages/tools.html
@@ -1,19 +1,81 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>50 Free AI Tools</title>
+<title>50+ Free AI Tools (Best for Beginners)</title>
 <link rel="stylesheet" href="../assets/style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
-<header><h1>50+ Free AI Tools (Best for Beginners)</h1></header>
-<div class="grid">
-  <div class="card"><h3>ChatGPT</h3><p>Writing, ideas, automation prompts.</p></div>
-  <div class="card"><h3>Gemini</h3><p>Research + content.</p></div>
-  <div class="card"><h3>Canva AI</h3><p>Designs & images.</p></div>
-  <div class="card"><h3>Leonardo AI</h3><p>Image generation.</p></div>
-  <div class="card"><h3>Notion AI</h3><p>Notes & docs.</p></div>
-  <div class="card"><h3>Make.com</h3><p>No-code automation.</p></div>
-  <div class="card"><h3>Zapier Free</h3><p>Connect apps.</p></div>
-</div>
+
+<header class="header">
+  <h1>50+ Free AI Tools for Beginners</h1>
+  <p>Writing • Image • Video • Automation • Productivity</p>
+</header>
+
+<section class="grid">
+
+  <!-- ========== WRITING & CONTENT ========== -->
+  <div class="card"><h3>ChatGPT</h3><p>Best for writing, ideas, emails, and automation prompts.</p></div>
+  <div class="card"><h3>Gemini</h3><p>Google’s AI for content, research & summaries.</p></div>
+  <div class="card"><h3>Claude</h3><p>Human-like writing, long documents & analysis.</p></div>
+  <div class="card"><h3>Writesonic</h3><p>Blog posts, ads, product descriptions.</p></div>
+  <div class="card"><h3>Copy.ai</h3><p>Business writing, emails & sales copy.</p></div>
+  <div class="card"><h3>Rytr</h3><p>Simple writing tool for beginners.</p></div>
+
+  <!-- ========== IMAGE GENERATION ========== -->
+  <div class="card"><h3>Leonardo AI</h3><p>Create high-quality images & designs.</p></div>
+  <div class="card"><h3>Canva AI</h3><p>Magic Media for image & video creation.</p></div>
+  <div class="card"><h3>Pixlr AI</h3><p>AI photo editing.</p></div>
+  <div class="card"><h3>Fotor AI</h3><p>AI portraits & enhancement.</p></div>
+  <div class="card"><h3>Craiyon</h3><p>Simple AI images for beginners.</p></div>
+
+  <!-- ========== VIDEO AI TOOLS ========== -->
+  <div class="card"><h3>Pictory</h3><p>Convert scripts into videos automatically.</p></div>
+  <div class="card"><h3>CapCut AI</h3><p>AI video editing & templates.</p></div>
+  <div class="card"><h3>InVideo AI</h3><p>Generate videos using text prompts.</p></div>
+  <div class="card"><h3>Runway ML</h3><p>Pro-level AI video editing tools.</p></div>
+  <div class="card"><h3>Synthesia</h3><p>Create AI avatar videos.</p></div>
+
+  <!-- ========== AUDIO & VOICE ========== -->
+  <div class="card"><h3>ElevenLabs Free</h3><p>Hyper-realistic AI voices.</p></div>
+  <div class="card"><h3>PlayHT</h3><p>Text-to-speech with natural tone.</p></div>
+  <div class="card"><h3>Revoicer</h3><p>Beginner-friendly voiceovers.</p></div>
+  <div class="card"><h3>Lalal.ai</h3><p>AI vocal remover & audio cleanup.</p></div>
+
+  <!-- ========== AUTOMATION TOOLS ========== -->
+  <div class="card"><h3>Make.com</h3><p>Free automation workflows.</p></div>
+  <div class="card"><h3>Zapier (Free)</h3><p>Automate apps with triggers.</p></div>
+  <div class="card"><h3>IFTTT</h3><p>Simple personal automation.</p></div>
+  <div class="card"><h3>n8n</h3><p>Open-source automation power tool.</p></div>
+  <div class="card"><h3>Automa Extension</h3><p>Automate browser tasks.</p></div>
+
+  <!-- ========== RESEARCH & LEARNING ========== -->
+  <div class="card"><h3>Perplexity AI</h3><p>AI search engine with citations.</p></div>
+  <div class="card"><h3>Scite.ai</h3><p>Research papers & analysis.</p></div>
+  <div class="card"><h3>Research Rabbit</h3><p>Organize research visually.</p></div>
+  <div class="card"><h3>Elicit AI</h3><p>AI research assistant.</p></div>
+  <div class="card"><h3>AskYourPDF</h3><p>Chat with long PDFs.</p></div>
+
+  <!-- ========== CODING & DEV TOOLS ========== -->
+  <div class="card"><h3>GitHub Copilot (Free Trial)</h3><p>Code generation & bug fixing.</p></div>
+  <div class="card"><h3>Codeium</h3><p>Free alternative to Copilot.</p></div>
+  <div class="card"><h3>Replit AI</h3><p>AI coding environment.</p></div>
+  <div class="card"><h3>Tabnine</h3><p>AI coding suggestions.</p></div>
+  <div class="card"><h3>Astral.sh</h3><p>AI terminal commands.</p></div>
+
+  <!-- ========== PRODUCTIVITY & MISC ========== -->
+  <div class="card"><h3>Notion AI</h3><p>Notes, docs, productivity.</p></div>
+  <div class="card"><h3>Todoist AI</h3><p>AI task management.</p></div>
+  <div class="card"><h3>Motion</h3><p>AI scheduling assistant.</p></div>
+  <div class="card"><h3>Readwise Reader</h3><p>AI summarizer for saved content.</p></div>
+  <div class="card"><h3>Tome AI</h3><p>Create AI presentations.</p></div>
+
+</section>
+
+<footer>
+  <p>Made with ❤️ using GitHub Pages</p>
+</footer>
+
 </body>
 </html>
