--- a/pages/automation.html
+++ b/pages/automation.html
@@ -1,15 +1,150 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <title>Beginner Automation Guides</title>
 <link rel="stylesheet" href="../assets/style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
-<header><h1>Beginner Automation Guides</h1></header>
+
+<header class="header">
+  <h1>Beginner Automation Guides</h1>
+  <p>Step-by-step workflows using free tools like Make, Zapier, Sheets, Canva & ChatGPT.</p>
+</header>
+
 <section class="grid">
-  <div class="card"><h3>Google Sheets → Email Automation</h3><p>Auto-send emails when new row added.</p></div>
-  <div class="card"><h3>Canva → Pinterest Auto Posting</h3><p>Schedule 90 days of pins via Buffer.</p></div>
-  <div class="card"><h3>ChatGPT → Auto Blog Generator</h3><p>Generate 30 blogs automatically.</p></div>
+
+  <!-- ========== GUIDE 1 ========== -->
+  <div class="card">
+    <h3>📧 Google Sheets → Auto Email Sender</h3>
+    <p>Send emails automatically when a new entry is added in Google Sheets.</p>
+    <ul>
+      <li>Step 1: Create a Google Sheet with Name, Email, Message.</li>
+      <li>Step 2: Go to <b>Make.com</b> → Create a new scenario.</li>
+      <li>Step 3: Add “Google Sheets → Watch Rows”.</li>
+      <li>Step 4: Add Gmail “Send Email”.</li>
+      <li>Step 5: Map fields and turn it ON.</li>
+    </ul>
+    <p><b>Result:</b> Add a row → Email auto-sent. Perfect for leads.</p>
+  </div>
+
+  <!-- ========== GUIDE 2 ========== -->
+  <div class="card">
+    <h3>🖼 Canva → Pinterest Auto Posting</h3>
+    <p>Schedule 30–90 days of Pinterest Pins in one shot.</p>
+    <ul>
+      <li>Step 1: Create 30 pins in Canva (1080×1920).</li>
+      <li>Step 2: Export all pins.</li>
+      <li>Step 3: Go to <b>Buffer Free</b>.</li>
+      <li>Step 4: Connect Pinterest Account.</li>
+      <li>Step 5: Upload all pins → Schedule daily.</li>
+    </ul>
+    <p><b>Result:</b> Daily evergreen traffic without doing anything.</p>
+  </div>
+
+  <!-- ========== GUIDE 3 ========== -->
+  <div class="card">
+    <h3>✍️ ChatGPT → Auto Blog Generator</h3>
+    <p>Create 30–100 blogs automatically using Sheets + Apps Script.</p>
+    <ul>
+      <li>Step 1: Create a Google Sheet with blog titles.</li>
+      <li>Step 2: Add an Apps Script that calls ChatGPT API.</li>
+      <li>Step 3: Auto-generate content in a new column.</li>
+      <li>Step 4: Publish manually or auto-post.</li>
+    </ul>
+    <p><b>Result:</b> Daily blogs = auto SEO traffic system.</p>
+  </div>
+
+  <!-- ========== GUIDE 4 ========== -->
+  <div class="card">
+    <h3>💬 ChatGPT → Auto Social Media Posts</h3>
+    <p>Create & publish daily content automatically.</p>
+    <ul>
+      <li>Step 1: Add content ideas into a Sheet.</li>
+      <li>Step 2: Use Make.com → “Generate Text (ChatGPT)”</li>
+      <li>Step 3: Auto schedule via Buffer.</li>
+    </ul>
+    <p><b>Result:</b> Instagram + LinkedIn + Pinterest auto-updates daily.</p>
+  </div>
+
+  <!-- ========== GUIDE 5 ========== -->
+  <div class="card">
+    <h3>📄 PDF / Lead Magnet Auto Delivery</h3>
+    <p>Send free templates automatically when someone signs up.</p>
+    <ul>
+      <li>Step 1: Create a landing page (Systeme.io).</li>
+      <li>Step 2: Upload your free template / PDF.</li>
+      <li>Step 3: Create automation → “When signup → send email”.</li>
+    </ul>
+    <p><b>Result:</b> Leads get your freebie instantly, no manual work.</p>
+  </div>
+
+  <!-- ========== GUIDE 6 ========== -->
+  <div class="card">
+    <h3>🧾 Google Forms → Auto Database → Auto Email</h3>
+    <p>Perfect for collecting leads or feedback.</p>
+    <ul>
+      <li>Step 1: Create a Google Form.</li>
+      <li>Step 2: Connect it to a Sheet.</li>
+      <li>Step 3: Make.com → New row → Gmail send.</li>
+    </ul>
+    <p><b>Result:</b> Form fills → Auto reply email.</p>
+  </div>
+
+  <!-- ========== GUIDE 7 ========== -->
+  <div class="card">
+    <h3>📊 Notion → Daily Task Automation</h3>
+    <p>Use AI to create tasks and schedule them automatically.</p>
+    <ul>
+      <li>Step 1: Create a Notion table.</li>
+      <li>Step 2: Integrate Notion with Make.com.</li>
+      <li>Step 3: Auto-create daily tasks using ChatGPT.</li>
+    </ul>
+    <p><b>Result:</b> Daily new ideas/tasks auto-generated.</p>
+  </div>
+
+  <!-- ========== GUIDE 8 ========== -->
+  <div class="card">
+    <h3>💵 Auto Affiliate Link Distribution</h3>
+    <p>Automatically send links to new followers or subscribers.</p>
+    <ul>
+      <li>Step 1: Add contacts to Google Sheets.</li>
+      <li>Step 2: Make.com → New row trigger.</li>
+      <li>Step 3: Auto-email with affiliate links.</li>
+    </ul>
+    <p><b>Result:</b> Completely passive recurring affiliate income.</p>
+  </div>
+
+  <!-- ========== GUIDE 9 ========== -->
+  <div class="card">
+    <h3>📥 Auto Download Delivery (Gumroad)</h3>
+    <p>Deliver digital products automatically after purchase.</p>
+    <ul>
+      <li>Step 1: Upload templates to Gumroad.</li>
+      <li>Step 2: Set up “post-purchase email”.</li>
+      <li>Step 3: Add Google Drive link.</li>
+    </ul>
+    <p><b>Result:</b> Customer buys → Instantly receives product.</p>
+  </div>
+
+  <!-- ========== GUIDE 10 ========== -->
+  <div class="card">
+    <h3>📱 Instagram → Auto Caption Generator</h3>
+    <p>AI writes your captions & hashtags automatically.</p>
+    <ul>
+      <li>Step 1: Store post ideas in a Google Sheet.</li>
+      <li>Step 2: Make.com → Generate caption with ChatGPT.</li>
+      <li>Step 3: Auto-upload draft to Buffer.</li>
+    </ul>
+    <p><b>Result:</b> Daily IG posts without writing anything.</p>
+  </div>
+
 </section>
+
+<footer>
+  <p>Made with ❤️ using GitHub Pages</p>
+</footer>
+
 </body>
 </html>
