--- a/pages/templates.html
+++ b/pages/templates.html
@@ -1,15 +1,97 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Free Templates</title>
+<title>Free AI Templates & Prompt Packs</title>
 <link rel="stylesheet" href="../assets/style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
-<header><h1>Free AI Templates & Prompt Packs</h1></header>
+
+<header class="header">
+  <h1>Free AI Templates & Prompt Packs</h1>
+  <p>Download-ready resources to speed up your content, automation & workflows.</p>
+</header>
+
 <section class="grid">
-  <div class="card"><h3>Notion Dashboard</h3><p>Download free</p></div>
-  <div class="card"><h3>Instagram Automation Pack</h3><p>Free PDF</p></div>
-  <div class="card"><h3>Pinterest Pin Template</h3><p>Download</p></div>
+
+  <!-- ========== TEMPLATE 1 ========== -->
+  <div class="card">
+    <h3>📘 Free Notion Dashboard</h3>
+    <p>All-in-one AI workspace for planning, ideas, content & tasks.</p>
+    <ul>
+      <li>Daily planner</li>
+      <li>Content calendar</li>
+      <li>Idea vault</li>
+    </ul>
+    <a class="small-btn" href="#" target="_blank">Download (Free)</a>
+  </div>
+
+  <!-- ========== TEMPLATE 2 ========== -->
+  <div class="card">
+    <h3>🎯 AI Prompts Master Pack (150+)</h3>
+    <p>Marketing, automation, writing, content, business & productivity prompts.</p>
+    <ul>
+      <li>150+ categorized prompts</li>
+      <li>Beginner-friendly</li>
+      <li>Copy & use instantly</li>
+    </ul>
+    <a class="small-btn" href="#" target="_blank">Download (Free)</a>
+  </div>
+
+  <!-- ========== TEMPLATE 3 ========== -->
+  <div class="card">
+    <h3>📸 Canva Pinterest Pin Templates</h3>
+    <p>Ready-made aesthetic pin designs for Traffic & Growth.</p>
+    <ul>
+      <li>30 editable templates</li>
+      <li>High-conversion design</li>
+      <li>Drag & edit in Canva</li>
+    </ul>
+    <a class="small-btn" href="#" target="_blank">Use in Canva (Free)</a>
+  </div>
+
+  <!-- ========== TEMPLATE 4 ========== -->
+  <div class="card">
+    <h3>🧾 Instagram Content System (Notion)</h3>
+    <p>Plan, script, write & track your IG posts using AI-powered structure.</p>
+    <ul>
+      <li>30-day content calendar</li>
+      <li>AI caption generator</li>
+      <li>Hashtag organizer</li>
+    </ul>
+    <a class="small-btn" href="#" target="_blank">Download (Free)</a>
+  </div>
+
+  <!-- ========== TEMPLATE 5 ========== -->
+  <div class="card">
+    <h3>⚙️ Automation Tracker Spreadsheet</h3>
+    <p>Track your workflows, ideas & triggers in one place.</p>
+    <ul>
+      <li>Workflow tracker</li>
+      <li>Automation ideas</li>
+      <li>No-code friendly</li>
+    </ul>
+    <a class="small-btn" href="#" target="_blank">Download</a>
+  </div>
+
+  <!-- ========== TEMPLATE 6 ========== -->
+  <div class="card">
+    <h3>📝 AI Script Generator Template</h3>
+    <p>Generate YouTube, reels & shorts scripts with one click.</p>
+    <ul>
+      <li>Plug & play</li>
+      <li>Short form + long form</li>
+      <li>Beginner-friendly</li>
+    </ul>
+    <a class="small-btn" href="#" target="_blank">Download (Free)</a>
+  </div>
+
 </section>
+
+<footer>
+  <p>Made with ❤️ using GitHub Pages</p>
+</footer>
+
 </body>
 </html>
