--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
   <p>Discover powerful AI tools, automate your work, and learn step-by-step workflows — all in one place.</p>
 
   <div class="hero-buttons">
-    <a class="btn primary" href="pages/tools.html">📘 Free AI Tools List</a>
+    <a class="btn primary" 
+       href="https://docs.google.com/forms/d/e/1FAIpQLSdTf-0oIxa_PfD8ISsGDZJVVVlv302cwW7I8cgSHY_d28EbWA/viewform?usp=header" 
+       target="_blank">
+       🚀 Get Free AI Toolkit
+    </a>
+
     <a class="btn secondary" href="pages/automation.html">⚙️ Automation Guides</a>
   </div>
 </section>
