--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <title>AI Tools & Automation — Free Guide</title>
+
+<!-- Pinterest Website Verification -->
+<meta name="p:domain_verify" content="a1248c5c90c6eb6cd4223a60e08334c8"/>
+
 <link rel="stylesheet" href="assets/style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
